hard-gists/69dfe7943b076f0d79db/run.log
=== Docker Run Log for 69dfe7943b076f0d79db ===
Started at: Mi 29. Okt 16:47:19 CET 2025

[2025-10-29 16:47:19] START: Running container for 69dfe7943b076f0d79db
[2025-10-29 16:47:20] SUCCESS: Container 3ce0fe97e864bcbd305184230765d72ce4d6051a234aa5fc3d38c4d3e1484bfd started for 69dfe7943b076f0d79db
=== Container logs for 69dfe7943b076f0d79db ===
  File "/snippet.py", line 20
    print '[INFO] The playbook does not exist'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 69dfe7943b076f0d79db ===
[2025-10-29 16:47:22] INFO: Container 3ce0fe97e864bcbd305184230765d72ce4d6051a234aa5fc3d38c4d3e1484bfd has stopped
